@@ -11,6 +11,7 @@ import org.testng.collections.Maps;
 public class SoftAssert extends Assertion {
   // LinkedHashMap to preserve the order
   private final Map<AssertionError, IAssert<?>> m_errors = Maps.newLinkedHashMap();
+  private static final String DEFAULT_SOFT_ASSERT_MESSAGE = "The following asserts failed:";
 
   @Override
   protected void doAssert(IAssert<?> a) {
@@ -27,8 +28,12 @@ public class SoftAssert extends Assertion {
   }
 
   public void assertAll() {
+    assertAll(null);
+  }
+
+  public void assertAll(String message) {
     if (!m_errors.isEmpty()) {
-      StringBuilder sb = new StringBuilder("The following asserts failed:");
+      StringBuilder sb = new StringBuilder(null == message ? DEFAULT_SOFT_ASSERT_MESSAGE : message);
       boolean first = true;
       for (AssertionError error : m_errors.keySet()) {
         if (first) {
